--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,37 @@
 @import "reset";
+@import "fonts";
+@import "vars";
+
+body {
+    font-family: var(--font-sans);
+    font-size: var(--font-size);
+    color: var(--text-color);
+    background-color: var(--dark);
+}
+
+
+h1, h2, h3 {
+    font-family: var(--font-mono);
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 2.67rem;
+}
+
+h2 {
+    font-size: 2.22rem;
+}
+
+h3 {
+    font-size: 1.78rem;
+}
+
+h4 {
+    font-size: 0.78rem;
+    font-weight: 300;
+}
+
+p {
+    line-height: 1.7rem;
+}
