--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {{ with resources.Get "css/main.css" |toCSS | minify | postCSS }}
-        <link rel="stylesheet" href="{{ .RelPermalink }}">
+    <link rel="stylesheet" href="{{ .RelPermalink }}">
     {{ end }}
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Title</h1>
+    <h1>Hero</h1>
+    <h2>Section Heading</h1>
+        <h3>Heading</h1>
+            <h4>Subtitle</h1>
+                <p>I had learned to code when I was 11 years old, in Turbo Pascal (yes, the blue
+                    screen IDE without syntax highlighting, good times). Right now, you are probably thinking that I was
+                    a child prodigy, destined to be a 1337x programmer, but I didn’t really see myself that way. Back
+                    then, I hated going to school, just as most of the kids did. I looked for every opportunity not to
+                    attend classes. In my elementary school, if you went to competitions, you could miss classes in
+                    order to “prepare” for the competitions. Naturally, I went to as many such competitions as I could.
+                    Therefore, I would occasionally miss classes to prepare, while, in reality, I would just stay home
+                    and play League of Legends. Programming came in handy, as I seemed to be good at it, so my professor
+                    started preparing me to attend competitions.</p>
 </body>
+
 </html>
