--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,18 @@
 @import "reset";
 @import "fonts";
 @import "vars";
+@import "header";
 
 body {
-    font-family: var(--font-sans);
+    font-family: var(--font-body);
     font-size: var(--font-size);
-    color: var(--text-color);
-    background-color: var(--dark);
+    color: var(--font-color);
+    background: var(--background-color);
 }
 
 
 h1, h2, h3 {
-    font-family: var(--font-mono);
+    font-family: var(--font-headings);
     font-weight: 500;
 }
 
@@ -35,3 +36,20 @@ h4 {
 p {
     line-height: 1.7rem;
 }
+
+a {
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.container {
+    padding: var(--container-padding);
+}
+
