--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -3,7 +3,7 @@
     --dark: #070707;
     --dark-gray: #222222;
     --light-gray: #cbd5e1;
-    --gradient: linear-gradient(45deg, #2D4DE0, #9F71F0 30%, #FC6277 60%, #F8EF6F 95%);
+    --gradient: linear-gradient(135deg, #2D4DE0, #9F71F0 30%, #FC6277 60%, #F8EF6F 95%);
     --font-mono: 'IBM Plex Mono', monospace;
     --font-sans: 'IBM Plex Sans', sans-serif;
     --font-size: 18px;
@@ -14,6 +14,13 @@
     --container-padding-horizontal: 5rem;
     --container-padding-vertical: 2rem;
     --container-padding: var(--container-padding-vertical) var(--container-padding-horizontal);
+    --burger-size: 2rem;
+    --full-height-minus-nav: calc(100vh - var(--container-padding-vertical) - var(--container-padding-vertical) - var(--burger-size));
+    --section-full-height: calc(var(--full-height-minus-nav) - var(--container-padding-vertical));
+    --border-width: 2px;
+    --border-radius: 20px;
+    --section-margin: 5rem;
+    --paragraph-margin: 2rem;
 }
 
 @media (prefers-color-scheme: light) {
