Add hero section as a partial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,22 +16,7 @@
 <body>
     {{ partial "header.html" }}
     <main class="container">
-        <section class="hero">
-            <div class="hero-text">
-                <h1>Hi, I’m Andrija Jelenković <br> a software engineer</h1>
-                <p>
-                    Officially, my job involves a lot of programming, designing, writing,
-                    code reviews etc.<br>
-                    But really? I solve problems, simple as that.
-                </p>
-                <div>
-                    <button class="button-primary">Contact me</button>
-                </div>
-            </div>
-            <div class="hero-image">
-                <img src="images/hero.svg">
-            </div>
-        </section>
+        {{ partial "hero.html"}}
         <h1>Hero</h1>
         <h2>Section Heading</h2>
         <h3>Heading</h3>
