Add about section

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -3,6 +3,7 @@
     min-height: var(--section-full-height);
     display: flex;
     flex-wrap: nowrap;
+    margin-top: calc(-1 * var(--nav-height));
 }
 
 .hero-text {
