--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,7 @@
             <div>
                 <ul>
                     <li><a>Projects</a></li>
-                    <li><a>About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a>Blog</a></li>
                     <li><a>Contact</a></li>
                 </ul>
