--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,9 +29,20 @@
                     Therefore, I would occasionally miss classes to prepare, while, in reality, I would just stay home
                     and play League of Legends. Programming came in handy, as I seemed to be good at it, so my professor
                     started preparing me to attend competitions.</p>
-                <a href="pdfs/Andrija_Jelenkovic_CV.pdf" download="">
-                    <h2>CV ↓</h2>
-                </a>
+                <div class="cv-container">
+                    <a href="pdfs/Andrija_Jelenkovic_CV.pdf" download="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="feather feather-file-text">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                            <polyline points="14 2 14 8 20 8"></polyline>
+                            <line x1="16" y1="13" x2="8" y2="13"></line>
+                            <line x1="16" y1="17" x2="8" y2="17"></line>
+                            <polyline points="10 9 9 9 8 9"></polyline>
+                        </svg>
+                        <h2>CV ↓</h2>
+                    </a>
+                </div>
             </div>
             <div class="about-work">
                 {{ range (sort ( where site.RegularPages "Section" "company" | first 3 ) ".Params.startDate"
