--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@
 @import "about";
 @import "projects";
 @import "posts";
+@import "footer";
 
 html {
     scroll-behavior: smooth;
@@ -71,6 +72,7 @@ ul {
 
 .container {
     padding: var(--container-padding);
+    padding-bottom: 0;
 }
 
 button {
