--- a/layouts/index.html
+++ b/layouts/index.html
@@ -68,6 +68,9 @@
                 {{end}}
             </div>
         </section>
+        <footer>
+            <h4>Andrija Jelenkovic © 2023 All rights reserved</h4>
+        </footer>
     </main>
 </body>
 
