--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,77 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{ with resources.Get "css/main.css" |toCSS | minify | postCSS }}
-    <link rel="stylesheet" href="{{ .RelPermalink }}">
-    {{ end }}
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-
-    <title>Andrija Jelenkovic</title>
-</head>
-
-<body>
-    {{ partial "header.html" }}
-    <main class="container">
-        {{ partial "hero.html"}}
-        <section class="about" id="about">
-            <div class="about-text">
-                <h2>About</h2>
-                <p>I had learned to code when I was 11 years old, in Turbo Pascal (yes, the blue
-                    screen IDE without syntax highlighting, good times). Right now, you are probably thinking that I was
-                    a child prodigy, destined to be a 1337x programmer, but I didn’t really see myself that way. Back
-                    then, I hated going to school, just as most of the kids did. I looked for every opportunity not to
-                    attend classes. In my elementary school, if you went to competitions, you could miss classes in
-                    order to “prepare” for the competitions. Naturally, I went to as many such competitions as I could.
-                    Therefore, I would occasionally miss classes to prepare, while, in reality, I would just stay home
-                    and play League of Legends. Programming came in handy, as I seemed to be good at it, so my professor
-                    started preparing me to attend competitions.</p>
-                <div class="cv-container">
-                    <a href="pdfs/Andrija_Jelenkovic_CV.pdf" download="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="feather feather-file-text">
-                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                            <polyline points="14 2 14 8 20 8"></polyline>
-                            <line x1="16" y1="13" x2="8" y2="13"></line>
-                            <line x1="16" y1="17" x2="8" y2="17"></line>
-                            <polyline points="10 9 9 9 8 9"></polyline>
-                        </svg>
-                        <h2>CV ↓</h2>
-                    </a>
-                </div>
+{{ define "main" }}
+<main class="container">
+    {{ partial "hero.html"}}
+    <section class="about" id="about">
+        <div class="about-text">
+            <h2>About</h2>
+            <p>I had learned to code when I was 11 years old, in Turbo Pascal (yes, the blue
+                screen IDE without syntax highlighting, good times). Right now, you are probably thinking that I was
+                a child prodigy, destined to be a 1337x programmer, but I didn’t really see myself that way. Back
+                then, I hated going to school, just as most of the kids did. I looked for every opportunity not to
+                attend classes. In my elementary school, if you went to competitions, you could miss classes in
+                order to “prepare” for the competitions. Naturally, I went to as many such competitions as I could.
+                Therefore, I would occasionally miss classes to prepare, while, in reality, I would just stay home
+                and play League of Legends. Programming came in handy, as I seemed to be good at it, so my professor
+                started preparing me to attend competitions.</p>
+            <div class="cv-container">
+                <a href="pdfs/Andrija_Jelenkovic_CV.pdf" download="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-file-text">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                        <polyline points="14 2 14 8 20 8"></polyline>
+                        <line x1="16" y1="13" x2="8" y2="13"></line>
+                        <line x1="16" y1="17" x2="8" y2="17"></line>
+                        <polyline points="10 9 9 9 8 9"></polyline>
+                    </svg>
+                    <h2>CV ↓</h2>
+                </a>
             </div>
-            <div class="about-work">
-                {{ range (sort ( where site.RegularPages "Section" "company" | first 3 ) ".Params.startDate"
-                "desc")
-                }}
-                {{ partial "company.html" .Params}}
-                {{ end }}
-            </div>
-        </section>
-        <section class="projects" id="projects">
-            <h2>Projects</h2>
-            <div class="projects-container">
-                {{ range (where site.RegularPages "Section" "projects" | first 3)}}
-                {{ partial "project.html" . }}
-                {{ end }}
-            </div>
-        </section>
-        <section>
-            <h2>Blog</h2>
-            <div class="posts-container" id="posts">
-                {{ range where site.RegularPages "Section" "posts" | first 3}}
-                {{partial "post-card.html" .}}
-                {{end}}
-            </div>
-        </section>
-        <footer>
-            <h4>Andrija Jelenkovic © 2023 All rights reserved</h4>
-        </footer>
-    </main>
-</body>
-
-</html>
+        </div>
+        <div class="about-work">
+            {{ range (sort ( where site.RegularPages "Section" "company" | first 3 ) ".Params.startDate"
+            "desc")
+            }}
+            {{ partial "company.html" .Params}}
+            {{ end }}
+        </div>
+    </section>
+    <section class="projects" id="projects">
+        <h2>Projects</h2>
+        <div class="projects-container">
+            {{ range (where site.RegularPages "Section" "projects" | first 3)}}
+            {{ partial "project.html" . }}
+            {{ end }}
+        </div>
+    </section>
+    <section>
+        <h2>Blog</h2>
+        <div class="posts-container" id="posts">
+            {{ range where site.RegularPages "Section" "posts" | first 3}}
+            {{partial "post-card.html" .}}
+            {{end}}
+        </div>
+    </section>
+</main>
+{{ end }}
