--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
     <div class="hero-text">
         <h1>Hi, I’m Andrija Jelenković <br> a software engineer</h1>
         <p>
