--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,10 +15,10 @@
         <div class="nav" id="nav">
             <div>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#posts">Blog</a></li>
-                    <li><a>Contact</a></li>
+                    <li><a href="/#about">About</a></li>
+                    <li><a href="/#projects">Projects</a></li>
+                    <li><a href="/#posts">Blog</a></li>
+                    <li><a href="/#hero">Contact</a></li>
                 </ul>
             </div>
             <div>
