--- a/layouts/partials/post-card.html
+++ b/layouts/partials/post-card.html
@@ -6,6 +6,8 @@
         </div>
         <p> {{ .Params.summary }}
         </p>
+        {{ if (isset .Params "date")}}
         <h4 class="post-date">{{ time.Format "January 6, 2006" .Params.date }}</h4>
+        {{end}}
     </div>
 </a>
