Add page layout

--- a/layouts/partials/post-card.html
+++ b/layouts/partials/post-card.html
@@ -1,4 +1,4 @@
-<a href="#">
+<a href="{{ .Permalink }}">
     <div class="post">
         <div class="post-title">
             <h3>{{ .Params.title }}</h3>
