--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,14 +11,20 @@
                 <line x1="3" y1="6" x2="21" y2="6"></line>
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg>
+            <a href="/#" id="logo-burger"><img src="/images/logo.svg" alt="logo"></a>
         </div>
         <div class="nav" id="nav">
             <div>
                 <ul>
+                    <li>
+                        <a href="/#" id="logo"><img src="/images/logo.svg" alt="logo"></a>
+                    </li>
+                    <li>
+                        <a href="/#">Home</a>
+                    </li>
                     <li><a href="/#about">About</a></li>
                     <li><a href="/#projects">Projects</a></li>
                     <li><a href="/#posts">Blog</a></li>
-                    <li><a href="/#hero">Contact</a></li>
                 </ul>
             </div>
             <div>
