Add dark mode support

--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -2,7 +2,7 @@
     --light: #FCFAFF;
     --dark: #070707;
     --dark-gray: #222222;
-    --light-gray: #cbd5e1;
+    --light-gray: #e2e8f0;
     --gradient: linear-gradient(135deg, #2D4DE0, #9F71F0 30%, #FC6277 60%, #F8EF6F 95%);
     --gradient-top-to-bot: linear-gradient(180deg,#2D4DE0, #9F71F0 30%, #FC6277 60%, #F8EF6F 95%);
     --font-mono: 'IBM Plex Mono', monospace;
@@ -31,12 +31,10 @@
     --card-body-margin: 1rem;
 }
 
-@media (prefers-color-scheme: light) {
-    :root {
-        --font-color: var(--dark);
-        --background-color: var(--light);
-        --background-gray: var(--light-gray);
-    }
+[data-theme="light"] {
+    --font-color: var(--dark);
+    --background-color: var(--light);
+    --background-gray: var(--light-gray);
 }
 
 @media screen and (max-width: 768px) {
