--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,9 +28,10 @@
                 </ul>
             </div>
             <div>
-                <a href="https://github.com/Amdrija" target="_blank">
+                {{ partial "dark-mode-toggle.html" }}
+                {{/* <a href="https://github.com/Amdrija" target="_blank">
                     <i class="devicon-github-original"></i>
-                </a>
+                </a> */}}
             </div>
         </div>
 
