--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,11 @@
 <footer>
+    <div class="social">
+        <a href="https://www.linkedin.com/in/andrija-jelenkovi%C4%87-5740b4194/">
+            <i class="devicon-linkedin-plain"></i>
+        </a>
+        <a href="https://github.com/Amdrija">
+            <i class="devicon-github-original"></i>
+        </a>
+    </div>
     <h4>Andrija Jelenkovic © 2023 All rights reserved</h4>
 </footer>
