--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -7,7 +7,9 @@
             But really? I solve problems, simple as that.
         </p>
         <div>
-            <button class="button-primary">Contact me</button>
+            <a href="mailto:andrija.jelenkovic@protonmail.com">
+                <button class="button-primary">Contact me</button>
+            </a>
         </div>
     </div>
     <div class="hero-image">
