--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -13,6 +13,6 @@
         </div>
     </div>
     <div class="hero-image">
-        <img src="images/hero.svg">
+        <img src="images/hero.svg" alt="Hero image with my skills: Rust, C#, Go, JavaScript, HTML, CSS etc.">
     </div>
 </section>
