--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,16 +1,26 @@
 footer {
+    margin-top: var(--paragraph-margin);
     text-align: center;
     padding: var(--container-padding);
+}
+
+.social a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 .social {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
     margin-bottom: var(--paragraph-margin);
 }
 
-.social i {
-    font-size: 32px;
+.social svg {
+    width: 32px;
+    height: 32px;
+    fill: var(--font-color);
 }
