--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,3 +126,9 @@ button {
     font-size: 1.2rem;
     padding-top: 2rem;
 }
+
+@media screen and (max-width: 1024px){
+    .section-link {
+        padding-top: 0;
+    }
+}
